# NYCUAutoSign

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/autoauth/: calendar_holiday.py  exceptions.py  main.py  nycu_sign.py
